--- a/config.json
+++ b/config.json
@@ -1,4 +1,52 @@
 {
+
     "language": "en",
-    "theme": "dark"
+    "theme": "light",
+
+    "FileManager_output_directory": "C:\\Excel Automation Local Outputs\\Chip Tray Photo Processor\\Processed",
+    "scripts_directory": "C:\\Excel Automation Local Outputs\\Chip Tray Photo Processor\\Scripts",
+
+    
+    "core_directory": "core",
+    "gui_directory": "gui",
+    "processing_directory": "processing",
+    "tests_directory": "tests",
+    "utils_directory": "utils",
+    "full_logo_path": "resources\\full_logo.png",
+    "logo_path": "resources\\logo.png",
+    "translations_path": "resources\\translations.csv",
+    "config_path": "config.json",
+
+
+    "save_debug_images": true,
+    "output_format": "tiff",
+    "jpeg_quality": 100,
+
+    "enable_blur_detection": true,
+    "blur_threshold": 207.24,
+    "blur_roi_ratio": 0.8,
+    "flag_blurry_images": false,
+    "blurry_threshold_percentage": 10.0,
+    "save_blur_visualizations": true,
+
+    "aruco_dict_type": "DICT_4X4_1000",
+    "corner_marker_ids": [0, 1, 2, 3],
+    "compartment_marker_ids": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23],
+    "metadata_marker_ids": [24],
+
+    "compartment_count": 20,
+    "compartment_interval": 1,
+
+    "enable_ocr": false,
+    "ocr_confidence_threshold": 70.0,
+    "ocr_config_options": [
+        "--psm 11 --oem 3",
+        "--psm 6 --oem 3",
+        "--psm 3 --oem 3"
+    ],
+    "use_metadata_for_filenames": true,
+    "metadata_filename_pattern": "{hole_id}_CC_{depth_from}-{depth_to}m",
+    "prompt_for_metadata": true,
+    "valid_hole_prefixes": ["BA", "NB", "SB", "KM"],
+    "enable_prefix_validation": true
 }
