--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "chip-tray-processor"
-version = "1.5.5"
+name = "GeoVue"
+version = "2.0.0"
 description = "Chip Tray Photo Processor"
 requires-python = ">=3.7"
 
